Add missing resource to non-vulcanized Downloads

BUG=611542
R=dbeam@chromium.org

Review-Url: https://codereview.chromium.org/2178813002
Cr-Commit-Position: refs/heads/master@{#407747}

Former-commit-id: 2edcb8d51c07ba717343849fd943cb197dc53f80